src/components/Header/header.module.css
.header {
  margin-top: .5rem;
  position: absolute;
  width: 100%;
}

.flex {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

@media only screen and (min-width: 24em) {
  .header {
    margin-top: 1rem;
  }
}

